Fix for ICE-6957(Regression: ICE-2761 selectInputText has styling problem when overlapping richText component)

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
@@ -1330,6 +1330,7 @@ input {
     position: absolute;
     display: block;
     border: 1px solid #0056EA;
+    z-index:1;
 
 }
 
