--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp.css
@@ -1342,6 +1342,7 @@ fieldset {
     border-right: 1px solid #666666;
     border-left: 1px solid #ABABAB;
     border-bottom: 1px solid #333333;
+    z-index:1;
 }
 
 .iceSelInpTxtRow {
